force-app/main/default/objects/Project_Stage_Task_Config__mdt/Project_Stage_Task_Config__mdt.object-meta.xml
<CustomObject>
    <label>Project Stage Task Config</label>
    <pluralLabel>Project Stage Task Configs</pluralLabel>
</CustomObject>