force-app/main/default/objects/Project_Stage_Task_Config__mdt/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <label>Owner Role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>