force-app/main/default/objects/Project_Stage_Task_Config__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>180</length>
    <type>Text</type>
</CustomField>