force-app/main/default/objects/Project_Stage_Task_Config__mdt/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>